# auth-shards

./: .gitignore  Cargo.toml  LICENSE
javascript/: passkey-client-authn.js  passkey-client-register.js
sql/function/: login-trace.plpg.sql
sql/schema/: actlogs.sqldef.sql  google_identities.sqldef.sql  identities.sqldef.sql  orgs.sqldef.sql  users.sqldef.sql  webauthns.sqldef.sql
src/: lib.rs
src/account/: mod.rs
src/password/: get_identity.sql  mod.rs
src/webauthn/: delete_passkey.sql  mod.rs
tests/integration/: common.rs  main.rs  password.rs  webauthn.rs
