[package]
name = "auth-shards"
version = "0.1.1"
authors = ["Chuma Takahiro <co.chuma@gmail.com>"]
edition = "2021"

[features]
default = []
compat-rails = [ "bcrypt" ]

[dependencies]
argon2 = "0.5"
base64 = "0.22"
bcrypt = { version = "0.15", optional = true }
log = "0.4"
passwords = "3.1"
pg-pool = { git = "https://github.com/chumaltd/server-util.git" }
regex = "1.10"
serde_json = "1.0"
server-conf = { git = "https://github.com/chumaltd/server-util.git" }
thiserror = "1.0"
tokio	= { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features=["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
uuid = { version = "1", features = ["serde", "fast-rng", "v7"] }
webauthn-rs = {version = "0.5.0", features = ["conditional-ui", "danger-allow-state-serialisation"]}
